plex/service.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  ports:
    - name: web
      port: 32400
      targetPort: web
  clusterIP: None
  selector:
    app: plex
