plex/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
spec:
  rules:
  - host: plex.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
